# turing_college_projects

module1-sprint1/: LICENSE  README.md  pyproject.toml
module1-sprint1/calculator_pkg_MAD/: __init__.py  calculator.py
module1-sprint1/tests/: test_calculator.py
